mycss/main.css
/* ... */
.article img,
.articleshortmsg img {
  display: block;
  margin: auto;
  left: 0;
  right: 0;
}

.article img:hover {
  cursor: pointer;
}

.article img:active {
  cursor: pointer;
}

.articletitle {
  width: 100%;
  word-break: keep-all;
  word-wrap: break-word;
  white-space: pre-wrap;
  text-decoration: none;
  transition: all .2s;
  font-weight: 500;
  font-size: 1rem;
  display: inline-block;
  line-height: 40px;
}

.articletime {
  font-size: 0.8rem;
}

.center-to-head {
  position: relative;
}

.center-to-head::after {
  left: 50%;
  content: '';
  display: block;
  /*开始时候下划线的宽度为100%*/
  width: 30%;
  height: 2px;
  position: absolute;
  background: rgb(83, 87, 90);
  transition: all 0.4s ease-in-out;
  /*通过transform的缩放scale来让初始时x轴为0*/
  transform: scale3d(0, 1, 1) translateX(-50%);
  /*将坐标原点移到元素的中间，以原点为中心进行缩放*/
  transform-origin: 50% 0;
}

.center-to-head:hover::after {
  /*鼠标经过时还原到正常比例*/
  transform: scale3d(1, 1, 1) translateX(-50%);
}

/* .article span {
  margin: 0 1px;
  font-size: 0.9rem;
  display: inline-block;
} */
.onearticle {
  width: 100%;
  border-bottom: 0.1rem var(--ydashed-color) dashed;
  margin-bottom: .5rem;
}

.onearticle>.articletitle {
  font-size: 2.3rem;
  font-weight: 100;
}

.onearticle>.articletitle:active {
  transform: none !important;
}

.ah {
  cursor: pointer;
  color: aliceblue;
  transition: all .2s;
}

.ah:hover {
  color: var(--yfont-minor-color);
}

.ah:active {
  color: var(--yfont-minor-color);
}

#reader {
  padding: 1rem;
}

#notice {
  text-align: center;
}

.myhide {
  height: 0 !important;
  opacity: 0 !important;
  z-index: -1 !important;
}

.myshow {
  opacity: 1 !important;
  z-index: 201 !important;
}

.remove {
  display: none;
}

.metadata {
  background-color: #ebebeb;
  color: var(--ymain-color);
  /* border-radius: 1rem; */
  margin: 1rem 0 2rem 0;
}

.metadatahead {
  background-color: var(--ydashed-color);
  color: var(--ymain-color);
  /* border-radius: 0.8rem 0.8rem 0 0; */
  padding: 0.5rem 1rem;
  font-weight: bold;
  font-size: 1rem;
}

.metadatabody {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  line-height: 2rem;
  padding: 0.5rem 1rem;
}

.saying {
  text-align: center;
  padding: .5rem 1rem;
  background-color: #f8f9fa;
  font-size: 1rem;
}

.saying-quote {
  font-size: 30px;
  width: 20px;
}

.articleshortmsg .saying-quote {
  display: none;
}

.saying-left-quote {
  float: left;
}

.saying-right-quote {
  float: right;
}

#homepage {
  position: absolute;
  background-color: var(--yfunction-color);
  width: 100%;
  text-align: center;
  display: flex;
  align-items: center;
  color: var(--yfont-minor-color);
  font-size: 4rem;
  transition: all .4s;
  font-weight: 200;
  margin: auto;
  top: 3rem;
  bottom: 0;
  background: url(https://cdn.jsdelivr.net/gh/youyinnn/youyinnn.github.io@master/img/wp.jpg);
  background-size: contain;
  background-position: bottom;
  background-repeat: no-repeat;
  background-color: #262c3a;
}

#hacknical_github_analysis {
  min-width: 98% !important;
  min-height: 98% !important;
  *width: 98% !important;
  *height: 98% !important;
  width: 1px !important;
}

.hacknical_hide {
  opacity: 0;
  z-index: -1 !important;
}

#ifwrapper {
  z-index: 998;
  overflow: hidden;
  -webkit-overflow-scrolling: touch;
  width: 95%;
  height: 95%;
  margin: auto !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  top: 0 !important;
  position: absolute !important;
}

.friendcard {
  margin: 0 auto;
  width: 30rem;
}

.todohead {
  line-height: 4rem;
  font-size: 2rem;
  margin-bottom: 1rem;
  border-bottom: 0.1rem var(--ydashed-color) dashed;
  padding-bottom: .6rem;
}

#scriptsearcher {
  position: fixed;
  margin: auto;
  left: 0;
  right: 0;
  width: 50%;
  bottom: 1rem;
  z-index: 500;
}

#scriptsearcher * {
  border-radius: initial;
}

.searchshow {
  opacity: 0.6;
}

.searchshow:hover {
  opacity: 1 !important;
}

.issuesbody {
  background-color: var(--ymain-color);
}

#bbt {
  position: fixed;
  right: 3rem;
  bottom: 1rem;
  z-index: 999;
  line-height: 2.375rem;
  height: 2.375rem;
}

#bbt a {
  float: left;
}

#gohub {
  background-color: var(--ymain-color);
  padding: 0 0.5rem;
  display: inline-block;
  color: aliceblue;
  text-align: center;
  text-decoration: none;
  transition: all .2s;
}

#toc {
  text-decoration: none;
  background-color: var(--ymain-color);
  padding: 0 0.5rem;
  display: inline-block;
  color: aliceblue;
  text-align: center;
}

#gohub:hover {
  background-color: var(--yminor-color);
}

#toc:hover {
  background-color: var(--yminor-color);
}

#toc:active {
  transform: translateY(0.2rem);
}

#gohub:active {
  transform: translateY(0.2rem);
}

.getnothing {
  animation: getnothing 1s;
}

@keyframes getnothing {
  50% {
    background-color: rgba(248, 166, 166, 0.781);
  }
}

#searchbut {
  width: 5rem;
}

#commentline {
  margin-top: 4rem;
  border: 2px var(--yminor-color) dashed;
  width: 100%;
}

#articleshare button {
  border-radius: 0;
  padding: 5px;
  font-size: 12px;
}

#sharetag {
  font-weight: bold;
  cursor: default;
}

#sharetag:focus {
  box-shadow: inherit;
}

#articleshare {
  right: 2rem;
}

#nocomment {
  font-weight: bold;
  font-size: 1.4rem;
  line-height: 2.5rem;
}

#nocomment>a {
  font-size: 1rem;
}

.dropdown-item {
  z-index: none;
}

#homepage-center {
  margin-left: 100px;
}

#showmore,
#showhacknical,
#toarticles {
  text-align: left;
  cursor: pointer;
  height: 3rem;
  line-height: 3rem;
  font-size: 1.2rem;
  transition: all .4s;
  margin-left: 40px;
  width: 250px;
}

#showmore:hover,
#toarticles:hover,
#showhacknical:hover {
  background-color: #dc35d90a;
}

#showmore:active,
#toarticles:active,
#showhacknical:active {
  transform: translateY(4px);
}

.pagination {
  margin: auto;
}
/* ... */

